<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SignUpActivity">

    <ImageView
        android:id="@+id/logo"
        style="@style/image_chat" />

    <EditText
        android:id="@+id/etUserNameSignUp"
        style="@style/editText"
        android:textColorHint="@color/btn_bg_orange"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/etEmailSignUp"
        style="@style/editText"
        android:textColorHint="@color/btn_bg_orange"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:layout_height="50dp"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/etPasswordSignUp"
        style="@style/editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:textColorHint="@color/btn_bg_orange"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/btnSignupSignUp"
        style="@style/orangeButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="88dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/doYouHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:textColor="@color/btn_bg_orange"
        android:text="@string/do_you_have_account"
        />

</LinearLayout>