<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/imageChat"
        style="@style/image_chat" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:textSize="34sp"
        android:layout_gravity="center"
        android:textColor="@color/btn_bg_orange"
        android:text="Log In"
        android:textStyle="bold"
        android:gravity="center"/>

    <EditText
        android:id="@+id/etEmailLogin"
        style="@style/editText"
        android:layout_marginTop="18dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_email"
        android:textColorHint="@color/btn_bg_orange"/>

    <EditText
        android:id="@+id/etPasswordLogin"
        style="@style/editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:textColorHint="@color/btn_bg_orange"/>

    <Button
        android:id="@+id/btnLoginLogin"
        style="@style/orangeButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="88dp"
        android:text="@string/login" />



        <TextView
            android:id="@+id/btnSignupLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:textColor="@color/btn_bg_orange"
            android:text="@string/dont_have_account"
            />

</LinearLayout>